# 567Terror

./: .gitignore  CMakeLists.txt  README.md  build.bat
.github/workflows/: build-plugins.yml  build.yml
.serena/: project.yml
docs/: Glitchwave567_Signal_Flow.drawio  Glitchwave567_Signal_Flow_v2.drawio  Glitchwave567_Signal_Flow_v3.drawio  Glitchwave567_Signal_Flow_v4.drawio  Glitchwave567_Signal_Flow_v5.drawio  MODS.md  SIM_NOTES.md  glitchwave567_v0.24.drawio  glitchwave567_v0.26.drawio
src/: AudioFilePlayer.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
src/dsp/: Glitchwave567.h  ModSystem.h
tools/: install_vst3.ps1  offline_render.cpp
